refactor: use Java 17 constructs where possible
Replaces Collectors.toList() with toList(). Use instanceof-patterns.